--- a/custom_components/112odin_alarmer/manifest.json
+++ b/custom_components/112odin_alarmer/manifest.json
@@ -1,7 +1,7 @@
 {
-  "domain": "112odin_alarmer",
+  "domain": "112odin_alarner",
   "name": "112Odin Alarmer",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "documentation": "https://github.com/dkduck/112Odin-Alarmer",
   "requirements": [
     "feedparser",
